--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 
         </div>
 
-        <nav id="habilitied-aquired">
+        <nav id="habilities-aquired">
 
             <img src="assets/aquired-step-01.svg"
 
