--- a/index.html
+++ b/index.html
@@ -48,9 +48,9 @@
 
             <div id="scroll-horizontal">
 
-                <img src='assets/step-01.svg' class="=step-1">
+                <img src='assets/step-01.svg' class="step-1">
 
-                <img src='assets/step-02.svg' class="=step-2">
+                <img src='assets/step-02.svg' class="step-2">
 
                 <img src='assets/step-03.svg' class="step-3">
 
@@ -153,8 +153,7 @@
     </section>
 
     <footer>
-        <div>go back to the top</div>
-        <img src="">
+        <a href="index.html">go back to the top</a>
     </footer>
 
     <script src="app.js"></script>
