--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 
             <div id="scroll-horizontal">
 
-                <img src='assets/step-01.svg' class="step-1">
+                <img src='assets/step-01.svg' class="step-1 active">
 
                 <img src='assets/step-02.svg' class="step-2">
 
@@ -62,13 +62,13 @@
 
         <nav id="habilities-aquired">
 
-            <img src="assets/aquired-step-01.svg"
+            <img src="assets/aquired-step-01.svg" class="habilitie-step-1 active">
 
-            <img src="assets/aquired-step-02.svg" 
+            <img src="assets/aquired-step-02.svg" class="habilitie-step-2"> 
 
-            <img src="assets/aquired-step-03.svg" 
+            <img src="assets/aquired-step-03.svg" class="habilitie-step-3">
 
-            <img src="assets/aquired-step-04.svg" class="step4">
+            <img src="assets/aquired-step-04.svg" class="habilitie-step-4">
 
         </nav>
 
@@ -134,18 +134,11 @@
         <div class="contact-list">
 
             <div class="e-mail">
-                <img src="">
-                <div>e-mail</div>
+                <a href="natalia.revelant@gmail.com">e-mail</a>
             </div>
 
             <div class="linkedin">
-                <img src="">
-                <div>linkedin</div>
-            </div>
-
-            <div class="instagram">
-                <img src="">
-                <div>instagram</div>
+                <a href="https://www.linkedin.com/in/nat%C3%A1lia-ferreira-9b3a86198/">linkedin</a>
             </div>
 
         </div>
